made app more responsive to mobile view also. fixed bug on retrieving wishList items from local storage Changed localhost endPoint to Laptop Ip to test on mobile

--- a/Ebay-Product-Search-Angular/src/app/app.component.css
+++ b/Ebay-Product-Search-Angular/src/app/app.component.css
@@ -5,6 +5,7 @@
 
 .nav-link {
   color: black;
+  font-weight: 500;
 }
 
 .cursor {
