--- a/Ebay-Product-Search-Angular/src/styles.css
+++ b/Ebay-Product-Search-Angular/src/styles.css
@@ -4,6 +4,7 @@
 .page-link {
   border: none;
   color: black;
+  font-weight: 500;
 }
 
 .page-item.active .page-link {
